[project]
name = "genaicostanalysis"
version = "0.1.0"
description = "Generative AI API Cost Calculator - A tool to estimate and compare costs of using Generative AI APIs versus per-seat licensing models"
requires-python = ">=3.12"
dependencies = [
    "streamlit>=1.45.1",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "plotly>=5.14.0",
    "xlsxwriter>=3.1.0",
]
